<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/bg_main"    android:padding="@dimen/space_xxl">    <TextView        android:id="@+id/tvTitle"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/space_xxl"        android:gravity="center"        android:text="@string/sucursal_title"        android:textColor="@color/gold_light"        android:textSize="@dimen/text_display"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <androidx.cardview.widget.CardView        android:id="@+id/cardDulceria"        android:layout_width="0dp"        android:layout_height="@dimen/card_height_xxxl"        android:layout_marginTop="@dimen/space_xxxl"        android:background="@drawable/zelda_selector"        android:clickable="true"        android:focusable="true"        android:foreground="?attr/selectableItemBackground"        app:cardBackgroundColor="@android:color/transparent"        app:cardCornerRadius="@dimen/corner_xl"        app:cardElevation="0dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/tvTitle">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:gravity="center"            android:orientation="vertical">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="🍬"                android:textSize="@dimen/icon_emoji_lg" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="@dimen/space_sm"                android:text="@string/sucursal_dulceria"                android:textColor="@color/gold_light"                android:textSize="@dimen/text_display_lg"                android:textStyle="bold" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="@dimen/space_sm"                android:text="Tienda de Dulces"                android:textColor="@color/white"                android:textSize="@dimen/text_body" />        </LinearLayout>    </androidx.cardview.widget.CardView>    <androidx.cardview.widget.CardView        android:id="@+id/cardAbarrotera"        android:layout_width="0dp"        android:layout_height="@dimen/card_height_xxxl"        android:layout_marginTop="@dimen/space_xxl"        android:background="@drawable/zelda_selector"        android:clickable="true"        android:focusable="true"        android:foreground="?attr/selectableItemBackground"        app:cardBackgroundColor="@android:color/transparent"        app:cardCornerRadius="@dimen/corner_xl"        app:cardElevation="0dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/cardDulceria">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:gravity="center"            android:orientation="vertical">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="🏪"                android:textSize="@dimen/icon_emoji_lg" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="@dimen/space_sm"                android:text="@string/sucursal_abarrotera"                android:textColor="@color/gold_light"                android:textSize="@dimen/text_display_lg"                android:textStyle="bold" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="@dimen/space_sm"                android:text="Tienda Abarrotera"                android:textColor="@color/white"                android:textSize="@dimen/text_body" />        </LinearLayout>    </androidx.cardview.widget.CardView></androidx.constraintlayout.widget.ConstraintLayout>